--- a/css/master.css
+++ b/css/master.css
@@ -16,6 +16,7 @@ body {
     color: #000;
     color: #290802;
     color: #212529;
+    height: 2000px;
 }
 .container {
     padding-left: 15px;
@@ -569,6 +570,26 @@ footer {
     color: var(--main-color);
 }
 /*End footer*/
+
+/*Scroll icon*/
+  .scroll {
+    position: fixed;
+    bottom: 10px;
+    right: -50px;
+    background-color: var(--main-color);
+    color: #fff;
+    font-weight: bold;
+    font-size: 25px;
+    padding: 10px 15px;
+    border-radius: 50%;
+    font-family: Arial, Tahoma;
+    cursor: pointer;
+    transition: var(--main-transition);
+  }
+  .scroll.show {
+    right: 10px;
+  }
+
 /* Responsive */
 @media (max-width: 992px) {
     .header-content, .about-content, .contact-container {
@@ -613,6 +634,9 @@ footer {
         padding: 7px;
         font-size: 15px;
     }
+    nav span {
+        display: none;
+    }
 
     .hover-content {
         display: flex;
@@ -624,6 +648,25 @@ footer {
 
     header, section {
         margin-left: 30px;
+    }
+    .image-shape {
+        position: absolute;
+        width: 85%;
+        height: 85%;
+        background-color: var(--main-color);
+        border-radius: 30% 65% 70% 30% / 30% 35% 70% 70%;
+        z-index: -1;
+        top: -20px;
+        right: 40px;
+        animation: morphShape 10s ease-in-out infinite;
+    }
+    .portfolio-img {
+        width: 90%;
+        height: auto;
+        border-radius: 20px;
+        position: relative;
+        z-index: 1;
+        transition: transform 0.5s;
     }
     .project-content {
         display: flex;
