--- a/css/master.css
+++ b/css/master.css
@@ -649,6 +649,9 @@ footer {
     header, section {
         margin-left: 30px;
     }
+    header h1 , span {
+        font-size: 2.2rem;
+    }
     .image-shape {
         position: absolute;
         width: 85%;
