--- a/css/master.css
+++ b/css/master.css
@@ -11,10 +11,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body {
-    background-color: #f8f5f3;
     background-color: #f7f6f5;
-    color: #000;
-    color: #290802;
     color: #212529;
     height: 2000px;
 }
@@ -301,6 +298,10 @@ header p {
     overflow: hidden;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     transition: transform 0.4s, box-shadow 0.4s;
+}
+
+.project-links a {
+    margin: auto;
 }
 
 .project-card:hover {
@@ -645,27 +646,24 @@ footer {
     .header-image {
         order: 1;
     }
-    header h1 , span {
-        font-size: 2.2rem;
+    .header-text {
+        padding: 10px;
+    }
+    header h1 > span{
+        font-size: 2rem;
     }
     .image-shape {
         position: absolute;
         width: 85%;
         height: 85%;
-        background-color: var(--main-color);
-        border-radius: 30% 65% 70% 30% / 30% 35% 70% 70%;
-        z-index: -1;
         top: -20px;
         right: 40px;
-        animation: morphShape 10s ease-in-out infinite;
     }
     .portfolio-img {
         width: 90%;
         height: auto;
-        border-radius: 20px;
         position: relative;
-        z-index: 1;
-        transition: transform 0.5s;
+        left: 20px;
     }
     .project-content {
         display: flex;
@@ -675,3 +673,20 @@ footer {
     }
 }
 
+@media (min-width: 992px) and (max-width: 1199px)  {
+header h1 {
+        font-size: 3rem;
+    }
+
+.image-shape {
+        position: absolute;
+        width: 85%;
+        height: 85%;
+        top: -20px;
+        right: 10px;
+    }
+    .project-content {
+        align-items: center;
+        text-align: center;
+    }
+}
